tests/baselines/reference/taggedTemplatesRawPartsInferenceES6.errors.txt
tests/cases/conformance/es6/templates/taggedTemplatesRawPartsInferenceES6.ts(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '{ parts: ["part1", "part2"]; raw: ["part\\1", "part\\2"]; args: [string]; }', but here has type '{}'.


==== tests/cases/conformance/es6/templates/taggedTemplatesRawPartsInferenceES6.ts (1 errors) ====
    function tag<TParts extends readonly string[], TRaw extends readonly string[], U extends readonly unknown[]>(strs: TemplateStringsArray<TParts, TRaw>, ...args: U): {parts: TParts; raw: TRaw; args: U} {
        return null;
    }
    
    var a = tag `part\1${''}part\2`;
    var a: {};
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '{ parts: ["part1", "part2"]; raw: ["part\\1", "part\\2"]; args: [string]; }', but here has type '{}'.
!!! related TS6203 tests/cases/conformance/es6/templates/taggedTemplatesRawPartsInferenceES6.ts:5:5: 'a' was also declared here.
    